--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header role="banner"><hgroup>
   <h1><a href="/">Place in My Head</a></h1>
   
-    <h2>Welcome!!!</h2>
+    <h2>Welcome to MA Ding's Site.</h2>
   
 </hgroup>
 
@@ -57,19 +57,24 @@
 <ul class="main-navigation">
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
+  <li><a href="/">Project</a></li>
+  <li><a href="/">Photo</a></li>
 </ul>
 
 </nav>
   <div id="main">
-    <div id="content">
+    <div id="content">  
       <div class="blog-index">
+        <h3>About Me</h3>
+          <p>
+            <big>I</big> am a senior student in Peking University, China.  My major is Computer Science.  As a member of Multimedia Information Processing Lab, Institute of Computer and Technology, Peking University, I'm interested in Information Retrieval, Cross-Media Retrieval, and Visualization.  
+          </p>
   
-  
-  <div class="pagination">
+  <!--<div class="pagination">
     
     <a href="/blog/archives">Blog Archives</a>
     
-  </div>
+  </div>-->
 </div>
 <aside class="sidebar">
   
