--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   <div id="main">
     <div id="content">  
       <div class="blog-index">
-        <h3>About Me</h3>
-          <p>
+        <h1 id="article">About Me</h3>
+          <p id="article">
             <big>I</big> am a senior student in Peking University, China.  My major is Computer Science.  As a member of Multimedia Information Processing Lab, Institute of Computer and Technology, Peking University, I'm interested in Information Retrieval, Cross-Media Retrieval, and Visualization.  
           </p>
   
@@ -97,7 +97,7 @@
   </div>
   <footer role="contentinfo"><p>
   Copyright &copy; 2012 - MA Ding -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>, deployed on <a href="www.github.com">GitHub</a></span>
 </p>
 
 </footer>
