--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div id="main">
     <div id="content">  
       <div class="blog-index">
-        <h1><article>About Me</article></h1>
+        <h1 style="left-margin:5px">About Me</h1>
           <article>
             <big>I</big> am a senior student in Peking University, China.  My major is Computer Science.  As a member of Multimedia Information Processing Lab, Institute of Computer and Technology, Peking University, I'm interested in Information Retrieval, Cross-Media Retrieval, and Visualization.  
           </article>
