--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div id="main">
     <div id="content">  
       <div class="blog-index">
-        <h1 style="margin-left:5px"><article>About Me</article></h1>
+        <h1 style="text-align:center"><article>About Me</article></h1>
           <article>
             <big>I</big> am a senior student in Peking University, China.  My major is Computer Science.  As a member of Multimedia Information Processing Lab, Institute of Computer and Technology, Peking University, I'm interested in Information Retrieval, Cross-Media Retrieval, and Visualization.  
           </article>
