--- a/pic/index.html
+++ b/pic/index.html
@@ -37,7 +37,7 @@
   <header role="banner"><hgroup>
   <h1><a href="/">Place in My Head</a></h1>
   
-    <h2>A blogging framework for hackers.</h2>
+    <h2>Welcome to MA Ding's Site.</h2>
   
 </hgroup>
 
