--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 </form>
   
 <ul class="main-navigation">
+  <li><a href="/">About Me</a></li>
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
   <li><a href="/">Project</a></li>
