--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
   <li><a href="/">Project</a></li>
-  <li><a href="/pic/">Photo</a></li>
+  <li><a href="/pic">Photo</a></li>
 </ul>
 
 </nav>
