--- a/sample.html
+++ b/sample.html
@@ -104,7 +104,7 @@
   </div>
   <footer role="contentinfo"><p>
   Copyright &copy; 2012 - MA Ding -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>, deployed on <a href="www.github.com">GitHub</a></span>
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a>, deployed on <a href="www.github.com">GitHub.</a></span>
 </p>
 
 </footer>
