--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <li><a href="/">About Me</a></li>
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
-  <li><a href="/">Project</a></li>
+  <li><a href="/projects/index.html">Project</a></li>
   <li><a href="/pic/index.html">Photo</a></li>
 </ul>
 
