--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <ul class="main-navigation">
   <li><a href="/">About Me</a></li>
   <li><a href="/">Blog</a></li>
-  <li><a href="/blog/archives">Archives</a></li>
-  <li><a href="/projects/index.html">Project</a></li>
+  <li><a href="/blog/archives/index.html">Archives</a></li>
+  <li><a href="/project/index.html">Project</a></li>
   <li><a href="/pic/index.html">Photo</a></li>
 </ul>
 
