--- a/pic/index.html
+++ b/pic/index.html
@@ -77,12 +77,12 @@
     <p>All pictures taken by iPhone4s or Galaxy Note2.</p>
     <p>Please enjoy every piece of life.</p>
     <p>Instagram me :) My ID is <b>fcimartin</b></p>
-    <p><img src="./insta_temp/1.jpg" /></p>
-    <p><img src="./insta_temp/5.jpg" /></p>
-    <p><img src="./insta_temp/2.jpg" /></p>
-    <p><img src="./insta_temp/8.jpg" /></p>
-    <p><img src="./insta_temp/3.jpg" /></p>
-    <p><img src="./insta_temp/12.jpg" /></p>
+    <p><img src="./insta_temp/1.jpg" width="550" height="550" /></p>
+    <p><img src="./insta_temp/5.jpg" width="550" height="550" /></p>
+    <p><img src="./insta_temp/2.jpg" width="550" height="550" /></p>
+    <p><img src="./insta_temp/8.jpg" width="550" height="550" /></p>
+    <p><img src="./insta_temp/3.jpg" width="550" height="550" /></p>
+    <p><img src="./insta_temp/12.jpg" width="550" height="550" /></p>
   </div>
 
   
