--- a/pic/index.html
+++ b/pic/index.html
@@ -78,11 +78,11 @@
     <p>Please enjoy every piece of life.</p>
     <p>Instagram me :) My ID is <b>fcimartin</b></p>
     <p><img src="./insta_temp/1.jpg" width="550" height="550" /></p>
-    <p><img src="./insta_temp/5.jpg" width="550" height="550" /></p>
-    <p><img src="./insta_temp/2.jpg" width="550" height="550" /></p>
-    <p><img src="./insta_temp/8.jpg" width="550" height="550" /></p>
-    <p><img src="./insta_temp/3.jpg" width="550" height="550" /></p>
-    <p><img src="./insta_temp/12.jpg" width="550" height="550" /></p>
+    <p><img src="./insta_temp/5.JPG" width="550" height="550" /></p>
+    <p><img src="./insta_temp/2.JPG" width="550" height="550" /></p>
+    <p><img src="./insta_temp/8.JPG" width="550" height="550" /></p>
+    <p><img src="./insta_temp/3.JPG" width="550" height="550" /></p>
+    <p><img src="./insta_temp/12.JPG" width="550" height="550" /></p>
   </div>
 
   
