--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header role="banner"><hgroup>
   <h1><a href="/">Place in My Head</a></h1>
   
-    <h2>Welcome to MA Ding's Site.</h2>
+    <h2>Welcome to MA Ding's Site. It's still under construction. Please be patient. :)</h2>
   
 </hgroup>
 
