--- a/infoVis/HW2_1.html
+++ b/infoVis/HW2_1.html
@@ -1,15 +1,20 @@
 <html>
 <head>
 	<style>
-	table
+	table, td
 	{
 		text-align: center;
+		background-color: red;
+
 	}
 	th
 	{
 		border-top: 0px;
 		border-right: 0px;
 		border-left: 0px;
+		border-bottom: 0px;
+	}
+	th.head{
 		border-bottom: 2px;
 	}
 	</style>
@@ -17,7 +22,7 @@
 
 <body>
 	<table>
-		<tr>
+		<tr class="head">
 			<th>Sales rep</th>	
 			<th>Quota</th>	
 			<th>Actual bookings</th>	
