--- a/infoVis/HW2_1.html
+++ b/infoVis/HW2_1.html
@@ -4,45 +4,43 @@
 	table, td
 	{
 		text-align: center;
-		background-color: red;
 
+	}
+	td
+	{
+		border-radius: 3px
 	}
 	th
 	{
-		border-top: 0px;
-		border-right: 0px;
-		border-left: 0px;
-		border-bottom: 0px;
+		border-bottom: 2px solid black;
 	}
-	th.head{
-		border-bottom: 2px;
-	}
+	
 	</style>
 </head>
 
 <body>
 	<table>
 		<tr class="head">
-			<th>Sales rep</th>	
-			<th>Quota</th>	
+			<th style="width:180px">Sales rep</th>	
+			<th style="width:80px">Quota</th>	
 			<th>Actual bookings</th>	
 			<th>Variance to quota</th>	
 			<th>% of quota</th>	
-			<th>Forecast</th>
+			<th style="width:80px">Forecast</th>
 		</tr>
-<tr><td>Larson, Terri</td>	<td>350000</td>	<td>588388</td>	<td>238388</td>	<td>168</td>	<td>600000</td>
-<tr><td>Garibaldi, John</td>	<td>250000</td>	<td>393774</td>	<td>143774</td>	<td>158</td>	<td>410000</td>
-<tr><td>Caruthers, Michael</td>	<td>300000</td>	<td>274875</td>	<td>-25125</td>	<td>92</td>	<td>324000</td>
-<tr><td>Mulligan, Robert</td>	<td>225000</td>	<td>259383</td>	<td>34383</td>	<td>115</td>	<td>275000</td>
-<tr><td>Brown, Sheryll</td>	<td>150000</td>	<td>234983</td>	<td>84983</td>	<td>157</td>	<td>260000</td>
-<tr><td>Wotisek, Gillian</td>	<td>190000</td>	<td>186352</td>	<td>-3648</td>	<td>98</td>	<td>210000</td>
-<tr><td>Albright, Gary</td>	<td>200000</td>	<td>183938</td>	<td>-16062</td>	<td>92</td>	<td>205000</td>
-<tr><td>Levenson, Bernard</td>	<td>175000</td>	<td>165733</td>	<td>-9267</td>	<td>95</td>	<td>193000</td>
-<tr><td>Jones, Suzanne</td>	<td>140000</td>	<td>134796</td>	<td>-5204</td>	<td>96</td>	<td>149000</td>
-<tr><td>LeShan, George</td>	<td>200000</td>	<td>124874</td>	<td>-75126</td>	<td>62</td>	<td>132000</td>
-<tr><td>Tetracelli, Sheila</td>	<td>50000</td>	<td>48737</td>	<td>-1263</td>	<td>97	<td>50000</td>
-<tr><td>Cartwright, Bonnie</td>	<td>100000</td>	<td>43875</td>	<td>-56125</td>	<td>44	<td>50000</td>
-<tr><td>Girard, Jean	<td>75000	<td>26883	<td>-48117</td>	<td>36</td>	<td>50000</td>
+<tr style="background-color:#ff9494"><td>Larson, Terri</td>	<td>350000</td>	<td>588388</td>	<td>238388</td>	<td>168</td>	<td>600000</td>
+<tr style="background-color:#ff9e9e"><td>Garibaldi, John</td>	<td>250000</td>	<td>393774</td>	<td>143774</td>	<td>158</td>	<td>410000</td>
+<tr style="background-color:#c0ffc0"><td>Caruthers, Michael</td>	<td>300000</td>	<td>274875</td>	<td>-25125</td>	<td>92</td>	<td>324000</td>
+<tr style="background-color:#ffc9c9"><td>Mulligan, Robert</td>	<td>225000</td>	<td>259383</td>	<td>34383</td>	<td>115</td>	<td>275000</td>
+<tr style="background-color:#ff9f9f"><td>Brown, Sheryll</td>	<td>150000</td>	<td>234983</td>	<td>84983</td>	<td>157</td>	<td>260000</td>
+<tr style="background-color:#c6ffc6"><td>Wotisek, Gillian</td>	<td>190000</td>	<td>186352</td>	<td>-3648</td>	<td>98</td>	<td>210000</td>
+<tr style="background-color:#c0ffc0"><td>Albright, Gary</td>	<td>200000</td>	<td>183938</td>	<td>-16062</td>	<td>92</td>	<td>205000</td>
+<tr style="background-color:#c3ffc3"><td>Levenson, Bernard</td>	<td>175000</td>	<td>165733</td>	<td>-9267</td>	<td>95</td>	<td>193000</td>
+<tr style="background-color:#c4ffc4"><td>Jones, Suzanne</td>	<td>140000</td>	<td>134796</td>	<td>-5204</td>	<td>96</td>	<td>149000</td>
+<tr style="background-color:#a2ffa2"><td>LeShan, George</td>	<td>200000</td>	<td>124874</td>	<td>-75126</td>	<td>62</td>	<td>132000</td>
+<tr style="background-color:#c5ffc5"><td>Tetracelli, Sheila</td>	<td>50000</td>	<td>48737</td>	<td>-1263</td>	<td>97	<td>50000</td>
+<tr style="background-color:#90ff90"><td>Cartwright, Bonnie</td>	<td>100000</td>	<td>43875</td>	<td>-56125</td>	<td>44	<td>50000</td>
+<tr style="background-color:#88ff88"><td>Girard, Jean	<td>75000	<td>26883	<td>-48117</td>	<td>36</td>	<td>50000</td>
 </body>
 
 
