--- a/infoVis/HW3.html
+++ b/infoVis/HW3.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>CoffeeVis</title>
-  <script src='lib/d3.v3.js'></script>
-  <script src='js/coffee.js'></script>
+  <!--<script src='lib/d3.v3.js'></script>
+  <script src='js/coffee.js'></script>-->
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <style>
     /*Define axis style here*/
