--- a/infoVis/hw3/index.html
+++ b/infoVis/hw3/index.html
@@ -34,6 +34,11 @@
 <body onload="init()"> <!-- init() method defined in coffee.js-->
 
 <div style="margin:70;">
+  <div>
+    <h1 style="font-size:24px;font-family:Helvetica"> CS7450 Information Visualization Homework 3</h1>
+    <p style="font-size:15px;font-family:Helvetica"> Ding Ma</p>
+    <p style="font-size:15px;font-family:Helvetica"> GTID: 902996925 </p>
+  </div>
   <div style="display: table-cell; width: 100;">
     <label for="xdropdown">X: </label><select id="xdropdown">
       <option val="sales">sales</option>
