--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -210,7 +210,7 @@
 				divCoca.id = "cssPlace";
 				divCoca.style.width = "100px";
 				divCoca.style.height = "20px";
-				divCoca.innerText = "Coca Cola World";
+				divCoca.innerText = "World of Coca Cola";
 
 				divCNN.id = "cssPlace";
 				divCNN.innerText = "CNN";
