--- a/centen/centen.html
+++ b/centen/centen.html
@@ -180,7 +180,7 @@
 				divYpos.style.position = 'absolute';
 				divYpos.style.fontSize = "16px";
 				divYpos.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divYpos.innerText = "UP";
+				divYpos.innerText = "DOWN";
 
 				divYneg.id = "cssContent";
 				divYneg.style.width = "48px";
@@ -189,7 +189,7 @@
 				divYneg.style.position = 'absolute';
 				divYneg.style.fontSize = "16px";
 				divYneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divYneg.innerText = "DOWN";
+				divYneg.innerText = "UP";
 
 				//for Z
 				divZpos.id = "cssContent";
