--- a/centen/centen.html
+++ b/centen/centen.html
@@ -189,7 +189,7 @@
 				divYneg.style.position = 'absolute';
 				divYneg.style.fontSize = "16px";
 				divYneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divYneg.innerText = "UP";
+				divYneg.innerText = "UUUUP";
 
 				//for Z
 				divZpos.id = "cssContent";
