--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -291,7 +291,7 @@
 				cssObjectCenten.position.x = 0.0;
 				cssObjectCenten.position.y = 80.0;
 				cssObjectCenten.position.z = 200.0;	
-				cssObjectCenten.rotation.y = Math.PI + 0.2;
+				cssObjectCenten.rotation.y = Math.PI / 2;
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
