--- a/centen/centen.html
+++ b/centen/centen.html
@@ -328,7 +328,9 @@
 				cssObjectCenten.position.x = 0.0;
 				cssObjectCenten.position.y = - 80.0;
 				cssObjectCenten.position.z = 200.0;	
-				cssObjectCenten.rotation.y = Math.PI + 0.2;
+				cssObjectCenten.rotation.y = Math.PI;
+				cssObjectCenten.rotation.x = - 0.15;
+				cssObjectCenten.rotation.z = - 0.05;
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
