--- a/centen/centen.html
+++ b/centen/centen.html
@@ -187,7 +187,7 @@
 				divXpos.style.position = 'absolute';
 				divXpos.style.fontSize = "16px";
 				divXpos.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divXpos.innerText = "NORTH";
+				divXpos.innerText = "WEST";
 
 				divXneg.id = "cssContent";
 				divXneg.style.width = "60px";
@@ -196,7 +196,7 @@
 				divXneg.style.position = 'absolute';
 				divXneg.style.fontSize = "16px";
 				divXneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divXneg.innerText = "SOUTH";
+				divXneg.innerText = "EAST";
 
 				// for Y
 				divYpos.id = "cssContent";
@@ -225,7 +225,7 @@
 				divZpos.style.position = 'absolute';
 				divZpos.style.fontSize = "16px";
 				divZpos.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZpos.innerText = "EAST";
+				divZpos.innerText = "NORTH";
 
 				divZneg.id = "cssContent";
 				divZneg.style.width = "48px";
@@ -234,7 +234,7 @@
 				divZneg.style.position = 'absolute';
 				divZneg.style.fontSize = "16px";
 				divZneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZneg.innerText = "West";
+				divZneg.innerText = "SOUTH";
 
 				divCenten.id = "cssPlace";
 				divCenten.innerText = "Centenial Olympic Park";
@@ -334,14 +334,14 @@
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
-				cssObjectAqua.position.x = 120.0;
+				cssObjectAqua.position.x = 150.0;
 				cssObjectAqua.position.y = - 20.0;
 				cssObjectAqua.position.z = -20.0;	
 				cssObjectAqua.rotation.y = - Math.PI / 2;
 
 				cssObjectCoca.width = 200;
 				cssObjectCoca.height = 12;
-				cssObjectCoca.position.x = 120.0;
+				cssObjectCoca.position.x = 150.0;
 				cssObjectCoca.position.y = - 25.0;
 				cssObjectCoca.position.z = 80.0;	
 				cssObjectCoca.rotation.y = - Math.PI / 2 - 0.3;
