--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -197,7 +197,7 @@
 				divZneg.style.position = 'absolute';
 				divZneg.style.fontSize = "16px";
 				divZneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZneg.innerText = "West";
+				divZneg.innerText = "WEST";
 
 				divCenten.id = "cssPlace";
 				divCenten.innerText = "Centenial Olympic Park";
