--- a/centen/centen.html
+++ b/centen/centen.html
@@ -118,32 +118,32 @@
                	
 				var sides1 = [
 					{
-						url: 'centen.0001.png',
+						url: 'centen.0000.png', // east
 						position: new THREE.Vector3( -512, 0, 0 ),
 						rotation: new THREE.Euler( 0, Math.PI / 2, 0 )
 					},
 					{
-						url: 'centen.0003.png',
+						url: 'centen.0002.png', // west
 						position: new THREE.Vector3 ( 512, 0, 0 ),
 						rotation: new THREE.Euler ( 0, -Math.PI / 2, 0 )
 					},
 					{
-						url: 'centen.0005.png',
+						url: 'centen.0005.png', // down
 						position: new THREE.Vector3 ( 0,  -512, 0 ),
 						rotation: new THREE.Euler ( -Math.PI/2, 0, Math.PI )
 					},
 					{
-						url: 'centen.0004.png',
+						url: 'centen.0004.png', // up
 						position: new THREE.Vector3 ( 0, 512, 0 ),
 						rotation: new THREE.Euler ( Math.PI/2 , 0, Math.PI)
 					},
 					{
-						url: 'centen.0000.png',
+						url: 'centen.0003.png', // north
 						position: new THREE.Vector3 ( 0, 0,  512 ),
 						rotation: new THREE.Euler ( 0, Math.PI, 0 )
 					},
 					{
-						url: 'centen.0002.png',
+						url: 'centen.0001.png', // south
 						position: new THREE.Vector3 ( 0, 0, -512 ),
 						rotation: new THREE.Euler ( 0, 0, 0 )
 					}
