--- a/centen/centen.html
+++ b/centen/centen.html
@@ -130,12 +130,12 @@
 					{
 						url: 'centen.0005.png', // down
 						position: new THREE.Vector3 ( 0,  -512, 0 ),
-						rotation: new THREE.Euler ( -Math.PI/2, 0, - Math.PI)
+						rotation: new THREE.Euler ( -Math.PI/2, 0, - Math.PI * 3/4)
 					},
 					{
 						url: 'centen.0004.png', // up
 						position: new THREE.Vector3 ( 0, 512, 0 ),
-						rotation: new THREE.Euler ( Math.PI/2 , 0, Math.PI)
+						rotation: new THREE.Euler ( Math.PI/2 , 0, Math.PI * 3/4)
 					},
 					{
 						url: 'centen.0003.png', // north
