--- a/centen/centen.html
+++ b/centen/centen.html
@@ -130,7 +130,7 @@
 					{
 						url: 'centen.0005.png', // down
 						position: new THREE.Vector3 ( 0,  -512, 0 ),
-						rotation: new THREE.Euler ( 0, 0, Math.PI)
+						rotation: new THREE.Euler ( 0, 0, Math.PI / 2)
 					},
 					{
 						url: 'centen.0004.png', // up
