--- a/centen/centen.html
+++ b/centen/centen.html
@@ -135,7 +135,7 @@
 					{
 						url: 'centen.0004.png',
 						position: new THREE.Vector3 ( 0, 512, 0 ),
-						rotation: new THREE.Euler ( Math.PI/2 , 0, － Math.PI / 2)
+						rotation: new THREE.Euler ( Math.PI/2 , 0, Math.PI / 2)
 					},
 					{
 						url: 'centen.0003.png',
