--- a/centen/centen.html
+++ b/centen/centen.html
@@ -187,7 +187,7 @@
 				divXpos.style.position = 'absolute';
 				divXpos.style.fontSize = "16px";
 				divXpos.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divXpos.innerText = "NORTH";
+				divXpos.innerText = "WEST";
 
 				divXneg.id = "cssContent";
 				divXneg.style.width = "60px";
@@ -196,7 +196,7 @@
 				divXneg.style.position = 'absolute';
 				divXneg.style.fontSize = "16px";
 				divXneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divXneg.innerText = "SOUTH";
+				divXneg.innerText = "EAST";
 
 				// for Y
 				divYpos.id = "cssContent";
@@ -225,7 +225,7 @@
 				divZpos.style.position = 'absolute';
 				divZpos.style.fontSize = "16px";
 				divZpos.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZpos.innerText = "EAST";
+				divZpos.innerText = "SOUTH";
 
 				divZneg.id = "cssContent";
 				divZneg.style.width = "48px";
@@ -234,7 +234,7 @@
 				divZneg.style.position = 'absolute';
 				divZneg.style.fontSize = "16px";
 				divZneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZneg.innerText = "West";
+				divZneg.innerText = "NORTH";
 
 				divCenten.id = "cssPlace";
 				divCenten.innerText = "Centenial Olympic Park";
@@ -325,8 +325,8 @@
 
 				cssObjectCenten.width = 200;
 				cssObjectCenten.height = 12;
-				cssObjectCenten.position.x = 0.0;
-				cssObjectCenten.position.y = - 80.0;
+				cssObjectCenten.position.x = - 80.0;
+				cssObjectCenten.position.y = - 200.0;
 				cssObjectCenten.position.z = 200.0;	
 				cssObjectCenten.rotation.y = Math.PI;
 				cssObjectCenten.rotation.x = - 0.15;
