--- a/centen/centen.html
+++ b/centen/centen.html
@@ -225,7 +225,7 @@
 				divZpos.style.position = 'absolute';
 				divZpos.style.fontSize = "16px";
 				divZpos.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZpos.innerText = "SOUTH";
+				divZpos.innerText = "NORTH";
 
 				divZneg.id = "cssContent";
 				divZneg.style.width = "48px";
@@ -234,7 +234,7 @@
 				divZneg.style.position = 'absolute';
 				divZneg.style.fontSize = "16px";
 				divZneg.style.WebkitTransform = "scale3d(-1, 1, 1)";
-				divZneg.innerText = "NORTH";
+				divZneg.innerText = "SOUTH";
 
 				divCenten.id = "cssPlace";
 				divCenten.innerText = "Centenial Olympic Park";
@@ -325,8 +325,8 @@
 
 				cssObjectCenten.width = 200;
 				cssObjectCenten.height = 12;
-				cssObjectCenten.position.x = - 80.0;
-				cssObjectCenten.position.y = - 200.0;
+				cssObjectCenten.position.x = 0.0;
+				cssObjectCenten.position.y = - 80.0;
 				cssObjectCenten.position.z = 200.0;	
 				cssObjectCenten.rotation.y = Math.PI;
 				cssObjectCenten.rotation.x = - 0.15;
@@ -334,17 +334,17 @@
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
-				cssObjectAqua.position.x = 150.0;
+				cssObjectAqua.position.x = -20.0;
 				cssObjectAqua.position.y = - 20.0;
-				cssObjectAqua.position.z = -20.0;	
-				cssObjectAqua.rotation.y = - Math.PI / 2;
+				cssObjectAqua.position.z = 150.0;	
+				// cssObjectAqua.rotation.y = - Math.PI / 2;
 
 				cssObjectCoca.width = 200;
 				cssObjectCoca.height = 12;
-				cssObjectCoca.position.x = 120.0;
+				cssObjectCoca.position.x = 80.0;
 				cssObjectCoca.position.y = - 25.0;
-				cssObjectCoca.position.z = 80.0;	
-				cssObjectCoca.rotation.y = - Math.PI / 2 - 0.3;
+				cssObjectCoca.position.z = 125.0;	
+				// cssObjectCoca.rotation.y = - Math.PI / 2 - 0.3;
 
 				cssObjectCNN.width = 100;
 				cssObjectCNN.height = 100;
