--- a/centen/centen.html
+++ b/centen/centen.html
@@ -334,17 +334,17 @@
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
-				cssObjectAqua.position.x = -20.0;
+				cssObjectAqua.position.x = 80.0;
 				cssObjectAqua.position.y = - 20.0;
 				cssObjectAqua.position.z = 150.0;	
-				// cssObjectAqua.rotation.y = - Math.PI / 2;
+				cssObjectAqua.rotation.y = - Math.PI;
 
 				cssObjectCoca.width = 200;
 				cssObjectCoca.height = 12;
-				cssObjectCoca.position.x = 80.0;
+				cssObjectCoca.position.x = -20.0;
 				cssObjectCoca.position.y = - 25.0;
 				cssObjectCoca.position.z = 125.0;	
-				// cssObjectCoca.rotation.y = - Math.PI / 2 - 0.3;
+				cssObjectCoca.rotation.y = - Math.PI;
 
 				cssObjectCNN.width = 100;
 				cssObjectCNN.height = 100;
