--- a/centen/centen.html
+++ b/centen/centen.html
@@ -325,9 +325,9 @@
 
 				cssObjectCenten.width = 200;
 				cssObjectCenten.height = 12;
-				cssObjectCenten.position.x = 0.0;
+				cssObjectCenten.position.x = - 200.0;
 				cssObjectCenten.position.y = - 80.0;
-				cssObjectCenten.position.z = 200.0;	
+				cssObjectCenten.position.z = 0.0;	
 				cssObjectCenten.rotation.y = Math.PI;
 				cssObjectCenten.rotation.x = - 0.15;
 				cssObjectCenten.rotation.z = - 0.05;
