--- a/centen/centen.html
+++ b/centen/centen.html
@@ -329,8 +329,7 @@
 				cssObjectCenten.position.y = - 80.0;
 				cssObjectCenten.position.z = 0.0;	
 				cssObjectCenten.rotation.y = Math.PI;
-				cssObjectCenten.rotation.x = - 0.15;
-				cssObjectCenten.rotation.z = - 0.05;
+				cssObjectCenten.rotation.y = Math.PI / 2;
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
@@ -341,17 +340,17 @@
 
 				cssObjectCoca.width = 200;
 				cssObjectCoca.height = 12;
-				cssObjectCoca.position.x = -20.0;
+				cssObjectCoca.position.x = 80.0;
 				cssObjectCoca.position.y = - 25.0;
-				cssObjectCoca.position.z = 125.0;	
+				cssObjectCoca.position.z = 160.0;	
 				cssObjectCoca.rotation.y = - Math.PI;
 
 				cssObjectCNN.width = 100;
 				cssObjectCNN.height = 100;
-				cssObjectCNN.position.x = -200.0;
+				cssObjectCNN.position.x = 5.0;
 				cssObjectCNN.position.y = 15.0;
-				cssObjectCNN.position.z = 5.0;				
-				cssObjectCNN.rotation.y =  Math.PI / 2;
+				cssObjectCNN.position.z = -200.0;				
+				cssObjectCNN.rotation.y =  0;
 
 				//Now add the whole scene object to the Argon world.
 				ARGON.World.add( sc );
