--- a/centen/centen.html
+++ b/centen/centen.html
@@ -200,7 +200,7 @@
 
 				// for Y
 				divYpos.id = "cssContent";
-				divYpos.style.width = "48px";
+				divYpos.style.width = "60px";
 				divYpos.style.height = "16px";
 				divYpos.style.backgroundColor = "blue";
 				divYpos.style.position = 'absolute';
@@ -219,7 +219,7 @@
 
 				//for Z
 				divZpos.id = "cssContent";
-				divZpos.style.width = "48px";
+				divZpos.style.width = "60px";
 				divZpos.style.height = "16px";
 				divZpos.style.backgroundColor = "green";
 				divZpos.style.position = 'absolute';
@@ -228,7 +228,7 @@
 				divZpos.innerText = "NORTH";
 
 				divZneg.id = "cssContent";
-				divZneg.style.width = "48px";
+				divZneg.style.width = "60px";
 				divZneg.style.height = "16px";
 				divZneg.style.backgroundColor = "green";
 				divZneg.style.position = 'absolute';
@@ -340,7 +340,7 @@
 
 				cssObjectCoca.width = 200;
 				cssObjectCoca.height = 12;
-				cssObjectCoca.position.x = 80.0;
+				cssObjectCoca.position.x = - 80.0;
 				cssObjectCoca.position.y = - 25.0;
 				cssObjectCoca.position.z = 160.0;	
 				cssObjectCoca.rotation.y = - Math.PI;
