--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -402,7 +402,7 @@
 
 			function onDocumentTouchStart( event ) {
 
-				event.preventDefault();
+				// event.preventDefault();
 
 				var touch = event.touches[ 0 ];
 				
