--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -203,7 +203,7 @@
 				divZneg.innerText = "WEST";
 
 				divCenten.id = "cssPlace";
-				divCenten.innerText = "Centenial Olympic Park";
+				divCenten.innerHTML = "<a href='http://www.centennialpark.com/' target='_blank'>Centenial Olympic Park</a>";
 
 				divAqua.id = "cssPlace";
 				divAqua.style.width = "100px";
