--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -295,7 +295,7 @@
 				cssObjectCenten.position.y = 80.0;
 				cssObjectCenten.position.z = 200.0;	
 				cssObjectCenten.rotation.y = Math.PI;
-				cssObjectCenten.rotation.x = - 0.0;
+				cssObjectCenten.rotation.x = - Math.PI / 2;
 				cssObjectCenten.rotation.z = - 0.0;
 
 				cssObjectAqua.width = 200;
