--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -291,12 +291,12 @@
 
 				cssObjectCenten.width = 200;
 				cssObjectCenten.height = 12;
-				cssObjectCenten.position.x = -100.0;
-				cssObjectCenten.position.y = 50.0;
+				cssObjectCenten.position.x = -50.0;
+				cssObjectCenten.position.y = 75.0;
 				cssObjectCenten.position.z = 200.0;	
 				cssObjectCenten.rotation.y = Math.PI;
-				cssObjectCenten.rotation.x = - Math.PI / 2;
-				cssObjectCenten.rotation.z = - 0.0;
+				cssObjectCenten.rotation.x = 0;
+				cssObjectCenten.rotation.z = 0;
 
 				cssObjectAqua.width = 200;
 				cssObjectAqua.height = 12;
