--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -216,7 +216,7 @@
 				divCoca.innerHTML = "<a href='http://www.worldofcoca-cola.com/' target='_blank'>World of Coca Cola</a>";
 
 				divCNN.id = "cssPlace";
-				divCNN.innerText = "CNN";
+				divCNN.innerHTML = "<a href='http://www.cnn.com/tour/' target='_blank'>CNN</a>";
 				
 
 				// create 6 CSS Objects in the scene graph
