--- a/centen/centen.html
+++ b/centen/centen.html
@@ -237,20 +237,20 @@
 				divZneg.innerText = "SOUTH";
 
 				divCenten.id = "cssPlace";
-				divCenten.innerText = "Centenial Olympic Park";
+				divCenten.innerHTML = "<a href='http://www.centennialpark.com/' target='_blank'>Centenial Olympic Park</a>";
 
 				divAqua.id = "cssPlace";
 				divAqua.style.width = "100px";
 				divAqua.style.height = "20px";
-				divAqua.innerText = "Georgia Aquarium";
+				divAqua.innerHTML = "<a href='http://www.georgiaaquarium.org/' target='_blank'>Georgia Aquarium</a>";
 
 				divCoca.id = "cssPlace";
 				divCoca.style.width = "100px";
 				divCoca.style.height = "20px";
-				divCoca.innerText = "World of Coca Cola";
+				divCoca.innerHTML = "<a href='http://www.worldofcoca-cola.com/' target='_blank'>World of Coca Cola</a>";
 
 				divCNN.id = "cssPlace";
-				divCNN.innerText = "CNN";
+				divCNN.innerHTML = "<a href='http://www.cnn.com/tour/' target='_blank'>CNN</a>";
 				
 
 				// create 6 CSS Objects in the scene graph
