--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
         <meta name="arenabled" />
         <script>
+        setTimeout(function(){alert("HAHAHA")},8000);
             var myAppController =
             {
                 geoObject : null,
